<resources>
    <string name="app_name">challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Roll The Dice</string>
    <string name="how_to_play">Anda Akan Mengulang 5x Permainan, Jika Anda Mendapat Skor Ganjil, Maka Anda Akan Bertambah 5 Point, Jika Anda Mendapatkan Genap, Maka Anda Akan Dikurangi 3 Point.</string>
    <string name="wanna_play">How To Play?</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="top_score">Top Score</string>
    <string name="username">username</string>
    <string name="total_0">Total = 0</string>
    <string name="roll">Roll</string>
    <string name="reset">reset</string>
    <string name="who_s_got_the_biggest_score">Who\'s Got The Biggest Score?</string>
</resources>