<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:fontFamily="@font/eight_bit"
        android:textSize="50sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wanna_play"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="#ffffff">

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/how_to_play"
            android:textSize="20sp" />
    </ScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/masukkan_nama"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:hint="@string/nama_anda"
        android:autofillHints="player"
        android:inputType="text" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@drawable/bit2_hijau"
        android:text="@string/let_s_play"
        android:fontFamily="@font/madness"
        android:textSize="26sp"

        />

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/top_score"
        android:background="@drawable/bit2_kuning"
        android:id="@+id/btn_topskor"
        android:textSize="26sp"
        android:fontFamily="@font/madness"
        />
</LinearLayout>