<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RollActivity">

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/madness"
        android:text="@string/username"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/eight_bit"
        android:text="Ready To Roll?"
        android:textAlignment="center"
        android:textSize="36sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dice_1"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:src="@drawable/empty_dice" />

            <TextView
                android:id="@+id/tv_dice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dice_2"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:src="@drawable/empty_dice" />

            <TextView
                android:id="@+id/tv_dice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dice_3"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:src="@drawable/empty_dice" />

            <TextView
                android:id="@+id/tv_dice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dice_4"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:src="@drawable/empty_dice" />

            <TextView
                android:id="@+id/tv_dice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dice_5"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:src="@drawable/empty_dice" />

            <TextView
                android:id="@+id/tv_dice_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/madness"
        android:gravity="center"
        android:text="@string/total_0"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_roll"
        android:background="@drawable/bit2_kuning"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/roll" />

    <Button
        android:background="@drawable/bit2_merah"
        android:id="@+id/btn_reset"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/reset" />
    <Button
        android:id="@+id/btn_topscore"
        android:background="@drawable/bit2_hijau"
        android:layout_margin="16dp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/top_score" />

</LinearLayout>